# mlops-mockup

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ruff.yml
src/acebet/app/dependencies/: predict_winner.py
