[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/acebet/__about__.py"

[tool.hatch.build.targets.sdist]
include = [ 
    "src/", 
    "/tests",
]

[project]
name = "acebet"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Oracle of the Tennis Champion, mock-up of a bet prediction app"
authors = [{name = "Thomas Bury", email = "bury.thomas@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["tennis", "bet", "prediction", "oracle", "sportbet"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3"
]

# [project.urls]
# homepage = "https://github.com/ThomasBury/AceBet"
# documentation = "https://github.com/ThomasBury/AceBet"
# repository = "https://github.com/ThomasBury/AceBet.git"
# changelog = "https://github.com/ThomasBury/AceBet"
# tracker = "https://github.com/ThomasBury/AceBet/issues"


dependencies = [
    "bcrypt>=4.2.0",
    "fastapi[standard]>=0.115.0",
    "joblib>=1.4.2",
    "lightgbm==3.3.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.2",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "scikit-learn>=1.5.2",
    "slowapi>=0.1.9",
]



[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "python-multipart>=0.0.12",
    "ruff>=0.6.9",
]
